force-app/main/default/objects/Order/fields/Total_Promo_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Promo_Discount_Amt__c</fullName>
    <label>Total Promo Discount Amt</label>
    <summarizedField>OrderItem.Promo_Discount_Amt__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>