force-app/main/default/objects/Order/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <description>Roll-up SUM of the Sales Tax of each Order Line.</description>
    <label>Total Tax</label>
    <summarizedField>OrderItem.Sales_Tax__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>