force-app/main/default/objects/Order/fields/Training_City__c.field-meta.xml
<CustomField>
    <fullName>Training_City__c</fullName>
    <description>City of the Training address for this Order.</description>
    <inlineHelpText>City of the Training address for this Order.</inlineHelpText>
    <label>Training City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>