force-app/main/default/objects/Order/fields/Training_Country__c.field-meta.xml
<CustomField>
    <fullName>Training_Country__c</fullName>
    <description>Country of the Training address for this Order.</description>
    <inlineHelpText>Country of the Training address for this Order.</inlineHelpText>
    <label>Training Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>