force-app/main/default/objects/Order/fields/Training_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_Postal_Code__c</fullName>
    <description>Postal Code on the Training address for this Order.</description>
    <inlineHelpText>Postal Code on the Training address for this Order.</inlineHelpText>
    <label>Training Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>