force-app/main/default/objects/Order/fields/Training_Province__c.field-meta.xml
<CustomField>
    <fullName>Training_Province__c</fullName>
    <description>Province of the Training address for this Order.</description>
    <inlineHelpText>Province of the Training address for this Order.</inlineHelpText>
    <label>Training Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>