force-app/main/default/objects/Order/fields/Training_Street__c.field-meta.xml
<CustomField>
    <fullName>Training_Street__c</fullName>
    <description>Street of the Training address for this Order.</description>
    <inlineHelpText>Street of the Training address for this Order.</inlineHelpText>
    <label>Training Street</label>
    <type>TextArea</type>
</CustomField>