force-app/main/default/objects/Order/fields/Week_Number_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Week_Number_of_Month__c</fullName>
    <formula>CEILING(
  (
  DAY( Datevalue(CreatedDate) ) +
  MOD( DATE( YEAR( Datevalue(CreatedDate) ), MONTH( Datevalue(CreatedDate) ), 1 ) - DATE( 1900, 4, 1 ), 7 )
  ) / 7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>