force-app/main/default/objects/Order/fields/Workflow_Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Trigger_Time__c</fullName>
    <description>Time based workflow fires an hour after this fields value (NOW - 55 mins + 1 hour = Fire job in 5 mins)</description>
    <formula>NOW() - 55/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Trigger Time</label>
    <type>DateTime</type>
</CustomField>