force-app/main/default/objects/Order/fields/WSIB_Contact__c.field-meta.xml
<CustomField>
    <fullName>WSIB_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WSIB Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (WSIB Contact)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>