force-app/main/default/objects/Order/fields/WSIB_Number__c.field-meta.xml
<CustomField>
    <fullName>WSIB_Number__c</fullName>
    <label>WSIB Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>