force-app/main/default/objects/Order/recordTypes/Booked_Order.recordType-meta.xml
<RecordType>
    <fullName>Booked_Order</fullName>
    <active>true</active>
    <description>Used to capture booked revenue</description>
    <label>Booked Order</label>
</RecordType>