force-app/main/default/objects/Order/validationRules/Cannot_change_owner_of_order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_owner_of_order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Id = &apos;8014p000001YMEf&apos;,
ISCHANGED(OwnerId)
)</errorConditionFormula>
    <errorMessage>This order cannot be moved to a different owner!</errorMessage>
</ValidationRule>