force-app/main/default/objects/Order/validationRules/Incorrect_Quote_Account_on_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Incorrect_Quote_Account_on_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( SBQQ__Quote__c )),
  ISCHANGED(AccountId),
  SBQQ__Quote__r.SBQQ__Account__c != AccountId 
)</errorConditionFormula>
    <errorMessage>Account must be the same as the quoted account!</errorMessage>
</ValidationRule>