force-app/main/default/objects/Order/validationRules/PO_Number_Required_For_Payment_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Required_For_Payment_Type</fullName>
    <active>false</active>
    <description>Requires user to provide a Purchase Order Number if the Payment Type = Purchase Order</description>
    <errorConditionFormula>AND(
ISPICKVAL(Payment_Type__c, &quot;Purchase Order&quot;),
ISBLANK(Purchase_Order_Number__c)
)</errorConditionFormula>
    <errorMessage>You must provide the Purchase Order Number when Payment Type = Purchase Order.</errorMessage>
</ValidationRule>