force-app/main/default/objects/Order/validationRules/Status_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_changed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
$Profile.Name!= &apos;OSG Sys Admin&apos; 
)</errorConditionFormula>
    <errorMessage>You cannot change the status of an order. Please contact your administrator.</errorMessage>
</ValidationRule>