force-app/main/default/objects/Order/listViews/All_Activated_Booked_Orders_2016.listView-meta.xml
<ListView>
    <fullName>All_Activated_Booked_Orders_2016</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Training_City__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>SALES.ACCOUNT.OWNERALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Booked_Order</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2016</value>
    </filters>
    <label>All Activated Booked Orders After 2016</label>
</ListView>