force-app/main/default/objects/Order/listViews/All_Activated_Modification_Orders.listView-meta.xml
<ListView>
    <fullName>All_Activated_Modification_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORIGINAL_ORDER.ORDER_NUMBER</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>SALES.ACCOUNT.OWNERALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>01246000000H4rl</value>
    </filters>
    <label>All Activated Modification Orders</label>
</ListView>