force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>