force-app/main/default/objects/Order/listViews/AllOrdersWithFeedback.listView-meta.xml
<ListView>
    <fullName>AllOrdersWithFeedback</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Sales_User__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Feedback_Date__c</columns>
    <columns>Feedback_Score__c</columns>
    <columns>Feedback_Wants_Contact__c</columns>
    <columns>Feedback_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Feedback_Date__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2020 12:00 AM</value>
    </filters>
    <label>All Orders With Feedback</label>
</ListView>