force-app/main/default/objects/Order/listViews/LMS_Orders1.listView-meta.xml
<ListView>
    <fullName>LMS_Orders1</fullName>
    <columns>SALES.ACCOUNT.OWNERALIAS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Owner_Name__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Order_Owner_Alias__c</columns>
    <columns>LearningLogin_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LearningLogin_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>LMS Orders</label>
</ListView>