force-app/main/default/objects/Order/listViews/This_Weeks_Orders.listView-meta.xml
<ListView>
    <fullName>This_Weeks_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDER.BILL_TO_CONTACT</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>SALES.ACCOUNT.OWNERALIAS</columns>
    <columns>Count_of_Physical_Goods__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Booked_Order</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s Orders</label>
</ListView>