force-app/main/default/objects/Order/listViews/Today_s_Physical_Good_Orders.listView-meta.xml
<ListView>
    <fullName>Today_s_Physical_Good_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Count_of_Physical_Goods__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Count_of_Physical_Goods__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>Today&apos;s Physical Good Orders</label>
</ListView>